# trs_control

./: CMakeLists.txt  package.xml
bag/: anglesToPosture_1.bag  legsPostures_1.bag  objectToPosture_1.bag  objectToPosture_1_first_succeful_test.bag  objectToPosture_1_test1.bag
include/: robotDefines.h
src/: bagRecorderArmsAndAngles.cpp  bagRecorderArmsAndObject.cpp  bagRecorderHeadAndArms.cpp  bagRecorderLegs.cpp  bagRecorderMotion.cpp  bagRecorderPostures.cpp  balanceLegs.cpp  basicControl.cpp  commandBuilder.cpp  conductor.cpp  faceTracking.cpp  handshake.cpp  kdtreeAnglesToArms.cpp  kdtreeHeadToArms.cpp  kdtreeObjectToArms.cpp  legsDemo.cpp  mergeBags.cpp  objectTracking.cpp  randomLegsPlayer.cpp  randomPosturePlayer.cpp  tabletCommand.cpp
srv/: getAllCurrentCmd.srv  getHeadPositionCmd.srv  getMotorCmdSet.srv  getSlaveCurrentCmd.srv  getSlaveLockCmd.srv
